# fancy-regex

./: .gitignore  .travis.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  Dockerfile  Mayhemfile  NOTES.md  PERFORMANCE.md  README.md  app.js  index.html  playground.css  utf8_string.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-playground.yml  gh-pages.yml
benches/: bench.rs  regexset_vs_individual.rs
docs/: absent.md  features.md  main.md  syntax.md
docs/subroutines/: 1_intro.md  3_left_recursion.md  4_recursion.md  flags and the common misconception.md  intro.md  left recursion.md
examples/: regexset_syntax_highlighting.rs  toy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
pkg/: README.md  fancy_regex_playground.d.ts  fancy_regex_playground.js  fancy_regex_playground_bg.wasm  fancy_regex_playground_bg.wasm.d.ts  package.json
playground/: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  serve.py
playground/src/: lib.rs
playground/web/: app.js  index.html  playground.css
src/: analyze.rs  compile.rs  error.rs  expand.rs  flags.rs  input.rs  lib.rs  optimize.rs  parse.rs  parse_flags.rs  regexset.rs  replacer.rs  seek.rs  vm.rs
src/bytes/: mod.rs
tests/: captures.rs  captures_bytes.rs  finding.rs  matching.rs  matching_bytes.rs  oniguruma.rs  parse.rs  regex_options.rs  regexset.rs  replace.rs  repro_empty_repeat.rs  repro_pos_past_end.rs  send_sync.rs  splitting.rs
tests/bytes/: captures.rs  main.rs  matching.rs
tests/common/: mod.rs
tests/oniguruma/: test_utf8.c  test_utf8_ignore.c
