[package]
name = "fancy-regex"
version = "0.11.0" # remember to update html_root_url
authors = ["Raph Levien <raph@google.com>", "Robin Stocker <robin@nibor.org>"]
edition = "2018"
license = "MIT"
description = "An implementation of regexes, supporting a relatively rich set of features, including backreferences and look-around."
readme = "README.md"
repository = "https://github.com/fancy-regex/fancy-regex"
documentation = "https://docs.rs/fancy-regex"
categories = ["text-processing"]
exclude = ["/.github/*", "/Cargo.lock.msrv"]

[features]
default = ["unicode", "perf"]
# Enable #[track_caller] in unit tests.
track_caller = []
perf = ["regex-automata/perf"]
unicode = ["regex-automata/unicode", "regex-syntax/unicode"]
serde = ["dep:serde"]

[dependencies.regex-automata]
version = "0.4"
default-features = false
features = ["std", "syntax", "meta", "nfa", "dfa", "hybrid"]

[dependencies.regex-syntax]
version = "0.8"
default-features = false
features = ["std"]

[dependencies.spin]
version = "0.9"
default-features = false
features = ["spin_mutex"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[dev-dependencies]
criterion = "0.3.0"
matches = "0.1.8"
quickcheck = "1.0.1"
regex = "1.10"

[[bench]]
name = "bench"
harness = false
