[package]
name = "fancy-regex"
# remember to update html_root_url
version = "0.12.0"
authors = ["Raph Levien <raph@google.com>", "Robin Stocker <robin@nibor.org>"]
edition = "2018"
license = "MIT"
description = "An implementation of regexes, supporting a relatively rich set of features, including backreferences and look-around."
readme = "README.md"
repository = "https://github.com/fancy-regex/fancy-regex"
documentation = "https://docs.rs/fancy-regex"
categories = ["text-processing"]
exclude = ["/.github/*", "/Cargo.lock.msrv"]

[features]
default = ["unicode", "perf", "std"]
# Enable #[track_caller] in unit tests.
track_caller = []

std = ["regex/std"]

perf = ["regex/perf"]
perf-dfa = ["regex/perf-dfa"]
perf-onepass = ["regex/perf-onepass"]
perf-backtrack = ["regex/perf-backtrack"]
perf-inline = ["regex/perf-inline"]
perf-literal = ["regex/perf-literal"]
perf-cache = ["regex/perf-cache"]

unicode = ["regex/unicode"]

[dependencies.regex]
version = "1.9.1"
default-features = false

[dependencies.bit-set]
version = "0.5.3"
default-features = false

[dev-dependencies]
criterion = "0.5.1"
matches = "0.1.10"
quickcheck = "1.0.3"

[[bench]]
name = "bench"
harness = false
