[package]
name = "fancy-regex-playground"
version = "0.1.0"
edition = "2021"
description = "WASM playground for fancy-regex"
repository = "https://github.com/fancy-regex/fancy-regex"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies]
fancy-regex = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"
lto = true
